# cppstr

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cppstr.cpp  cppstr.h
benchmarks/: CMakeLists.txt  algo.hpp  allocation.hpp  allocations.cpp  allocations.h  benchmark.hpp  helper.cpp  helper.h  main.cpp  parameter.cpp  parameter.h  parameter.hpp  test_main.hpp  test_object.h
cmake/: cppstr-config.cmake
include/cppstr/: cppstr.h  sparam.h  stringview.h
src/: cppstr.cpp  sparam.cpp  stringview.cpp
